--- a/Views/Shared/Components/GenderDDL/Default.cshtml
+++ b/Views/Shared/Components/GenderDDL/Default.cshtml
@@ -1,5 +1,23 @@
-﻿@*
-    For more information on enabling MVC for empty projects, visit https://go.microsoft.com/fwlink/?LinkID=397860
-*@
-@{
-}
+﻿@model GenderVCM
+<select class= "form-select form-select-lg form-set" asp-for="Gender" style="width:100%" data-parsley-required-message="Kindly Select Gender" required>
+    @if(Model.ItemList == null || !Model.ItemList.Any())
+    {
+        <option value="">--Empty List--</option>
+    }
+    else
+    {
+        <option value="">--Please Select--</option>
+        @foreach (var item in Model.ItemList)
+        {
+            if (Model.Gender == item.Id)
+            {
+                <option value="@item.Id" selected="selected">@item.Name</option>
+            }
+            else
+            {
+                <option value="@item.Id">@item.Name</option>    
+            }
+        }
+    }
+
+ </select>
