--- a/Views/_ViewImports.cshtml
+++ b/Views/_ViewImports.cshtml
@@ -1,3 +1,8 @@
 ﻿@using FreeCodeCampAcademy
 @using FreeCodeCampAcademy.Models
+@using FreeCodeCampAcademy.Assets.AppKits.RegWizValidations;
+@using FreeCodeCampAcademy.Models.RegVMs
+@using FreeCodeCampAcademy.Assets.Enums
+@using FreeCodeCampAcademy.Assets
 @addTagHelper *, Microsoft.AspNetCore.Mvc.TagHelpers
+@addTagHelper *, FreeCodeCampAcademy
